SUBDIRS = giv 

EXTRA_DIST = AUTHORS   \
             COPYING   \
             ChangeLog \
             INSTALL   \
             README    \
             TODO      \
             giv.lsm   \
             autogen.sh \
             doc/giv.phtml \
             doc/giv.html \
             doc/giv-maja.jpg \
             doc/giv-zoom-in.jpg \
             doc/marks-view-1.png \
             doc/marks-view-2.png \
             doc/example.marks


