htmldir = $(prefix)/share/doc/giv

html_DATA = \
             giv.phtml \
             giv.html \
             giv-logo-150.png \
             giv-logo.png \
	     giv-maja.jpg \
	     giv-zoom-in.jpg \
	     marks-view-1.png \
	     marks-view-2.png \
	     gallery-europe.jpg \
	     gallery-europe-zoom.jpg \
	     gallery-cat-contour.jpg \
	     gallery-cat-contour-sub-pixel.png \
	     gallery-quiver.jpg \
	     gallery-convex-hull.png \
	     gallery-voronoi.png \
             alpha-example.jpg \
	     gallery-cat-pseudo-color.jpg \
	     text-align.giv \
	     text-align-screenshot.png \
             plugins.txt

EXTRA_DIST = \
             SConscript \
	     eperl \
             giv.phtml \
             giv.html \
             giv-logo-150.png \
             giv-logo.png \
	     giv-maja.jpg \
	     giv-zoom-in.jpg \
	     marks-view-1.png \
	     marks-view-2.png \
	     gallery-europe.jpg \
	     gallery-europe-zoom.jpg \
	     gallery-cat-contour.jpg \
	     gallery-cat-contour-sub-pixel.png \
	     gallery-quiver.jpg \
	     gallery-convex-hull.png \
	     gallery-voronoi.png \
             alpha-example.jpg \
	     gallery-cat-pseudo-color.jpg \
	     text-align.giv \
	     text-align-screenshot.png \
             plugins.txt
