SUBDIRS = examples src doc

EXTRA_DIST = AUTHORS    \
             COPYING    \
             ChangeLog  \
             INSTALL    \
             README     \
             TODO       \
             BUGS       \
             NEWS       \
             giv.nsi    \
             SConstruct \
             giv.lsm    \
             autogen.sh \
	     giv-logo-install.ico
