EXTRA_DIST = \
    3x3-graph.giv \
    arrows.giv \
    cat-contour.giv \
    example.giv \
    maja.pgm \
    marks.giv \
    quiver.giv \
    style-ex.giv \
    arrows.giv \
    multi-img.giv \
    colors.giv \
    alpha-example.giv \
    text-unicode.giv \
    text-align.giv \
    lena.pgm \
    text1.png \
    text2.png \
    text3.png 
