lib_LIBRARIES = libdov_image_viewer.a

libdov_image_viewer_a_SOURCES = dov-image-viewer-fixed.cc

libdov_image_viewer_a_inc_HEADERS = dov-image-viewer.h dov-image-viewer-private.h

libdov_image_viewer_a_incdir = $(includedir)/dov_image_viewer
libdov_image_viewer_a_LIBADD = 

# set the include path found by configure
INCLUDES= $(all_includes)

AM_CPPFLAGS = \
	$(GTK_CFLAGS) 
