EXTRA_DIST = SConscript

noinst_LIBRARIES = libdcmdata.a

libdcmdata_a_SOURCES = cmdlnarg.cc \
dcbytstr.cc \
dcchrstr.cc \
dccodec.cc \
dcdatset.cc \
dcddirif.cc \
dcdebug.cc \
dcdicdir.cc \
dcdicent.cc \
dcdictbi.cc \
dcdict.cc \
dcdictzz.cc \
dcdirrec.cc \
dcelem.cc \
dcerror.cc \
dcfilefo.cc \
dchashdi.cc \
dcistrma.cc \
dcistrmb.cc \
dcistrmf.cc \
dcistrmz.cc \
dcitem.cc \
dclist.cc \
dcmetinf.cc \
dcobject.cc \
dcostrma.cc \
dcostrmb.cc \
dcostrmf.cc \
dcostrmz.cc \
dcpcache.cc \
dcpixel.cc \
dcpixseq.cc \
dcpxitem.cc \
dcrleccd.cc \
dcrlecce.cc \
dcrlecp.cc \
dcrledrg.cc \
dcrleerg.cc \
dcrlerp.cc \
dcsequen.cc \
dcstack.cc \
dcswap.cc \
dctag.cc \
dctagkey.cc \
dctypes.cc \
dcuid.cc \
dcvm.cc \
dcvrae.cc \
dcvras.cc \
dcvrat.cc \
dcvr.cc \
dcvrcs.cc \
dcvrda.cc \
dcvrds.cc \
dcvrdt.cc \
dcvrfd.cc \
dcvrfl.cc \
dcvris.cc \
dcvrlo.cc \
dcvrlt.cc \
dcvrobow.cc \
dcvrof.cc \
dcvrpn.cc \
dcvrpobw.cc \
dcvrsh.cc \
dcvrsl.cc \
dcvrss.cc \
dcvrst.cc \
dcvrtm.cc \
dcvrui.cc \
dcvrul.cc \
dcvrulup.cc \
dcvrus.cc \
dcvrut.cc \
dcxfer.cc

libdcmdata_a_LIBADD = 

# set the include path found by configure
INCLUDES= $(all_includes)

